Added configurations of CI and docker run

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -2,7 +2,7 @@ upstream spa {
     server spa:4200;
 }
 
-upstream web {
+upstream api {
     server web:5883;
 }
 
@@ -24,7 +24,7 @@ server {
         if ($true) {
             rewrite /api/(.*) /$1 break;
             client_max_body_size 64M;
-            proxy_pass http://web;
+            proxy_pass http://api;
         }
     }
 }
