--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,14 @@ services:
     environment:
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
+      - MONGO_USER=monk
+      - MONGO_PSWD=mongopassword
 
   mongo:
     image: 'mongo:latest'
     restart: always
+    environment:
+      - MONGO_PSWD=mongopassword
 
   spa:
     build:
