--- a/spa/package.json
+++ b/spa/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "test": "ng test -watch false -browsers ChromeHeadless",
+    "test": "ng test -watch false -browsers ChromeNoSandbox",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
