--- a/spa/Dockerfile.dev
+++ b/spa/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM node:alpine
 
-RUN apk add chromium && \
-    export CHROME_BIN='/usr/bin/chromium'
+RUN apk add chromium-browser && \
+    export CHROME_BIN='/usr/bin/chromium-browser'
 
 WORKDIR /app
 
