--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
 
-  web:
+  api:
     build:
       dockerfile: Dockerfile
       context: ./web
@@ -12,6 +12,7 @@ services:
       - MONGO_PORT=27017
       - MONGO_USER=monk
       - MONGO_PSWD=mongopassword
+      - MONGO_URI_CONNECT='mongodb://localhost:27017'
 
   mongo:
     image: 'mongo:latest'
