--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - MONGO_PORT=27017
       - MONGO_USER=monk
       - MONGO_PSWD=mongopassword
-      - MONGO_URI_CONNECT='mongodb://localhost:27017'
+      - MONGO_URI_CONNECT=mongodb://localhost:27017
 
   mongo:
     image: 'mongo:latest'
