rds bundle download test in web api; added command to create uploads folder

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.8-alpine
 WORKDIR /usr/src/app
 
 COPY ./requirements.txt ./
+RUN mkdir -p ./uploads
+RUN wget https://s3.amazonaws.com/rds-downloads/rds-combined-ca-bundle.pem
 RUN pip3 install  --no-cache-dir -r requirements.txt
 
 RUN apk add --update --no-cache py3-numpy
