Date fix to test

--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -4,5 +4,8 @@ WORKDIR /usr/src/app
 COPY ./requirements.txt ./
 RUN pip install  --no-cache-dir -r requirements.txt
 
+RUN apk add --update --no-cache py3-numpy
+ENV PYTHONPATH=/usr/lib/python3.8/site-packages
+
 COPY . .
 CMD ["python", "app.py"]
